index 정리(회원정보수정(-))

--- a/index/html/login.html
+++ b/index/html/login.html
@@ -71,6 +71,15 @@
                             <button type="submit" value="Login">Login</button>
                         </p>
                     </form>
+
+                    <!-- 소셜 로그인 -->
+                    <div class="social-login">
+                        <a href="https://accounts.google.com/signin/v2/sl/pwd?hl=ko&flowName=GlifWebSignIn&flowEntry=ServiceLogin" class="go-google" title="Connect with Google">
+                            <span>Google로 로그인</span>
+                        </a>
+                    </div>
+                    <!-- /소셜 로그인 -->
+
                     <p class="form-bottom-message">
                         <a href="#0">Forgot your password?</a>
                     </p>
