--- a/index/html/main.HTML
+++ b/index/html/main.HTML
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <script src="https://code.jquery.com/jquery-1.11.3.js"></script> <!--jquery연결-->
     <!--CSS파일 연결-->
-    <link href="RESET.css" type=text/css rel=stylesheet />
-    <link href="Main-final.css" type=text/css rel=stylesheet />
+    <link href="../css/common.css" type=text/css rel=stylesheet />
+    <link href="../css/main.css" type=text/css rel=stylesheet />
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet" />
     <title>Linker</title>
     <style>
@@ -23,15 +23,19 @@
         <header id="header">
             <!--로고부분-->
             <a href="#" class="logo-background">
-                <span class="logo-full"><img src="logo.png" width="100" /></span>
-                <span class="logo-mini"><img src="logo_mini.png" width="15" /></span>
+                <span class="logo-full"><img src="../image/logo.png" width="100" /></span>
+                <span class="logo-mini"><img src="../image/logo_mini.png" width="15" /></span>
             </a>
             <!--왼쪽메뉴 단추-->
             <span class="ltMenu-button" style="cursor:pointer" onclick="openNav()">&#9776;</span>
-            <!--오른쪽메뉴 단추-->
+            <!--오른쪽메뉴 설정단추-->
             <span class="rtMenu-button" style="cursor:pointer" onclick="openAside()">
-                <img src="icon_gear.png" width="23" />
+                <img src="../image/icon_gear.png" width="23" />
             </span>
+            <!--오른쪽메뉴 프로필단추-->
+            <!--<span class="rtMenu-profile" style="cursor:pointer" onclick="openProfileSetting()">
+                <img src="../image/profile.png" alt="프로필 사진" />
+            </span>-->
             <!--헤더 검색창-->
             <div class="header-search">
                 <form>
@@ -53,7 +57,7 @@
                         <!--확장메뉴 | 상단 프로필영역-->
                         <div class="profile-area">
                             <a href="#" class="profile-img-area">
-                                <img src="profile.png" class="profile-img" />
+                                <img src="../image/profile.png" class="profile-img" />
                             </a>
                             <div class="profile-nickname-area">
                                 <div class="profile-nickname">Holiday</div>
@@ -72,7 +76,7 @@
 
                     <!--축소 메뉴(아이콘)-->
                     <nav class="iconBar">
-                        <a href="#"><img src="profile.png" class="profile-img" /></a>
+                        <a href="#"><img src="../image/profile.png" class="profile-img" /></a>
                         <!--마우스 오버시 아이콘 색변경 되도록-->
                         <a href="#" onmouseover="this.childNodes[0].src = 'https://s5.postimg.org/u765gerlj/icon_project_A.png'" onmouseout="    this.childNodes[0].src = 'https://s5.postimg.org/wbqihhlif/icon_project.png'"><img src="https://s5.postimg.org/wbqihhlif/icon_project.png" width="30" border="0" /><span class="icon-menuName">Project</span></a>
                         <a href="#" onmouseover="this.childNodes[0].src = 'https://s5.postimg.org/beuacuicn/icon_erd_A.png'" onmouseout="    this.childNodes[0].src = 'https://s5.postimg.org/6sy64hp3r/icon_erd.png'"><img src="https://s5.postimg.org/6sy64hp3r/icon_erd.png" width="30" border="0" /><span class="icon-menuName">ERD</span></a>
@@ -113,7 +117,7 @@
                                                 <li>
                                                     <!-- 작성자 -->
                                                     <div class="pic-list-writer">
-                                                        <div class="profile"><img src="profile.png" alt="프로필 사진" /></div>
+                                                        <div class="profile"><img src="../image/profile.png" alt="프로필 사진" /></div>
                                                     </div>
                                                     <!-- 이력내용 -->
                                                     <div class="pic-list-desc">
@@ -148,14 +152,14 @@
                                         <div class="tab-content-box">
                                             <!--팀 멤버 프로필 사진-->
                                             <div class="all-members">
-                                                <img src="profile.png" class="profile-img" />
-                                                <img src="profile.png" class="profile-img" />
-                                                <img src="profile.png" class="profile-img" />
-                                                <img src="profile.png" class="profile-img" />
-                                                <img src="profile.png" class="profile-img" />
-                                                <img src="profile.png" class="profile-img" />
-                                                <img src="profile.png" class="profile-img" />
-                                                <img src="profile.png" class="profile-img" />
+                                                <img src="../image/profile.png" class="profile-img" />
+                                                <img src="../image/profile.png" class="profile-img" />
+                                                <img src="../image/profile.png" class="profile-img" />
+                                                <img src="../image/profile.png" class="profile-img" />
+                                                <img src="../image/profile.png" class="profile-img" />
+                                                <img src="../image/profile.png" class="profile-img" />
+                                                <img src="../image/profile.png" class="profile-img" />
+                                                <img src="../image/profile.png" class="profile-img" />
                                             </div>
                                             <!--초대 버튼-->
                                             <div class="invite">
@@ -244,6 +248,13 @@
             };
         };
 
+        //헤더 프로필단추 dropdown메뉴
+        function openProfileSetting() {
+            //1. 프로젝트 화면이면 .rtMenu-profile img display block?
+            //  1-1. 클릭할 때마다 dropdown 왔다갔다
+            //2. 프로젝트 화면이 아니면 .rtMenu-profile img display none
+        }
+
         $(document).ready(function () {
             //오른쪽 메뉴 탭버튼 제어
             $(".mainAside .nav-tabs > li").on("click", function () {
@@ -256,6 +267,8 @@
                 activeTabNum = idx;
             });
         });
+
+
     </script>
 
 
